2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MissingAttributeUsageOnCustomAttributeRule.cs: New. Rule that checks
	for attributes without a [AttributeUsage] attribute [Daniel Abramov]
	* Gendarme.Rules.Design.xml.in: Added new rule descriptions.
	* Gendarme.Rules.Design.mdp: Added files to MonoDevelop project file.
	* Makefile.am: Add new rules/tests to the build.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidPublicInstanceFieldsRule.cs: New. Rule to check for public
	instance fields that could be converted into properties [Adrian Tsai]
	* ConsiderConvertingMethodToPropertyRule.cs: New. Rule to check
	for methods that could be converted into properties [Adrian Tsai]
	* Gendarme.Rules.Design.xml.in: Added new rule descriptions.
	* Gendarme.Rules.Design.mdp: Added files to MonoDevelop project file.
	* Makefile.am: Add new rules/tests to the build.

2007-12-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MainShouldNotBePublicRule.cs: New. Rule to check that the Main 
	entry point isn't visible outside it's assembly. By Daniel Abramov.
	* Gendarme.Rules.Design.xml.in: Added new rule description.
	* Gendarme.Rules.Design.mdp: Add new file to MonoDevelop project file.
	* Makefile.am: Add new rule/tests to the build.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsRule.cs: New. Rule
	to check for public constructors inside abstract classes.
	* AvoidEmptyInterfaceRule.cs: New. Rule to check for empty interfaces
	* AvoidPropertiesWithoutGetAccessorRule.cs: New. Rule to check for
	properties with only a setter.
	* DefineAZeroValueRule.cs: New. Abstract base class for 
	[EnumsShould|FlagsShouldNot]DefineAZeroValueRule.
	* DontDeclareProtectedFieldsInSealedClassRule.cs: Updated to use
	simpler Location ctor.
	* EnumsShouldDefineAZeroValueRule.cs: New. Rule to check that all
	enums, except flags, provide a 0 value.
	* FlagsShouldNotDefineAZeroValueRule.cs: New. Rule to check that all